<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, NetTtsSettings!</string>
    <string name="app_name">Necromant\'s NetTTS</string>
    <string name="port">4444</string>
    <string name="btn_start">(Re)start</string>
    <string name="btn_kill">Kill service!</string>
    <string name="autostart">Start at boot</string>
    <string name="locale">Locale to use:</string>
    <string name="hint">Set the locale to the language code you would like to use by default (e.g. en_US, ru_RU). If auth tag is specified, it should on first line of input text.</string>
    <string name="about"> (c) Necromant 2011  2012</string>
    <string name="site">http://ncrmnt.org/</string>
    <string name="contact">nettts@ncrmnt.org</string>
    <string name="issue_tracker">https://github.com/nekromant/NetTTS/issues</string>
    <string name="sug">Mail bugs and suggestions here:</string>
    <string name="authtag">Auth tag (blank for none)</string>
    <string name="pref_port">TCP port to run at:</string>
</resources>
