<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pref_port" >
            </TextView>

            <EditText
                android:id="@+id/port"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:text="@string/port" >

                <requestFocus android:layout_height="wrap_content" >
                </requestFocus>
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/locale" >
            </TextView>

            <EditText
                android:id="@+id/loc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >
            </EditText>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/authtag" />

            <EditText
                android:id="@+id/authtag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="6" />
        </TableRow>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/autostart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/autostart" >
            </CheckBox>
        </LinearLayout>


    </TableLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1.0" >

            <Button
                android:id="@+id/kill"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_kill" >
            </Button>

            <Button
                android:id="@+id/start"
                android:layout_weight=".5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/btn_start" >
            </Button>

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sug"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:autoLink="email"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/issue_tracker"
            android:autoLink="web"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/site"
            android:autoLink="web"
            android:textAppearance="?android:attr/textAppearanceMedium" >
        </TextView>
    </LinearLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>